Menus and views are now loaded dynamically. Implemented table view as a proof of concept.

--- a/css/custom.css
+++ b/css/custom.css
@@ -3,10 +3,10 @@ body {
     padding-left: 300px;
 }
 
-.main {
+#main {
     padding: 20px;
 }
 
-.main .page-header {
+#main .page-header {
     margin-top: 0;
 }
