--- a/css/custom.css
+++ b/css/custom.css
@@ -36,7 +36,7 @@
 
 .navmenu {
     width: 200px;
-    padding-top: 10px;
+    padding-top: 5px;
 }
 
 .navbar-toggle {
@@ -198,4 +198,53 @@
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+}
+
+/* EYP theme changes */
+.navbar-inverse {
+    background-color: #1E4E8A;
+    border-color: #1E4E8A;
+    color: white;
+}
+
+.navbar-inverse .navbar-brand {
+    color: white;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color: white;
+}
+
+.navbar-inverse .navbar-nav > .open > a,
+.navbar-inverse .navbar-nav > .open > a:hover,
+.navbar-inverse .navbar-nav > .open > a:focus,
+.navbar-inverse .navbar-toggle:hover {
+    background-color: #1A3E6E;
+}
+
+.navbar-inverse .navbar-toggle {
+    border-color: #1A3E6E;
+}
+
+.dropdown-toggle {
+    font-size: 16px;
+}
+
+.navmenu-default .navmenu-nav > li > a,
+.navbar-default .navbar-offcanvas .navmenu-nav > li > a,
+.navmenu-default .navmenu-nav > .open > a,
+.navbar-default .navbar-offcanvas .navmenu-nav > .open > a,
+.navmenu-default .navmenu-nav > .open > a:hover,
+.navbar-default .navbar-offcanvas .navmenu-nav > .open > a:hover,
+.navmenu-default .navmenu-nav > .open > a:focus,
+.navbar-default .navbar-offcanvas .navmenu-nav > .open > a:focus {
+    color: inherit;
+}
+
+.bootstrap-table .table {
+    border-bottom: 0px;
+}
+
+.bootstrap-table .table thead > tr > th {
+    border-bottom-width: 1px;
 }
