--- a/css/custom.css
+++ b/css/custom.css
@@ -176,6 +176,10 @@
     border-top: none !important;
 }
 
+.fht-cell {
+    display: none;
+}
+
 /* Loading animation */
 .spinner {
     width: 40px;
