--- a/css/custom.css
+++ b/css/custom.css
@@ -341,6 +341,22 @@
     border-bottom-width: 1px;
 }
 
+.bootstrap-table .table tr[data-bg-color='red'] {
+    background-color: rgba(255, 0, 0, 0.1);
+}
+
+.bootstrap-table .table tr[data-bg-color='green'] {
+    background-color: rgba(0, 255, 0, 0.1);
+}
+
+.bootstrap-table .table tr[data-bg-color='yellow'] {
+    background-color: rgba(255, 255, 0, 0.1);
+}
+
+.bootstrap-table .table tr[data-bg-color='blue'] {
+    background-color: rgba(0, 0, 255, 0.1);
+}
+
 .btn-primary {
     background-color: #1E4E8A;
     border-color: #1B4275;
