Improved styling of header buttons on mobile devices

--- a/css/06-custom.css
+++ b/css/06-custom.css
@@ -17,6 +17,14 @@
     #eyp-logo img {
         margin-left: -170px;
     }
+
+    .header-button {
+        width: 40px;
+    }
+
+    .header-button > .button-text {
+        display: none;
+    }
 }
 
 #main {
